# my-dev-portfolio

./: .gitignore  LICENSE  README.md
ai/ai_image_generator/: .env.example  README.md  package-lock.json
ai/ai_image_generator/app/: page.tsx
ai/ai_image_generator/app/api/generate/: route.ts
ai/nlp2crud/: .env.example  README.md  cli.py  main.py  pyproject.toml  requirements.txt
ai/nlp2crud/app/adapters/: database.py
ai/nlp2crud/app/core/: auth.py  config_loader.py  llm_client.py  prompt_parser.py
ai/nlp2crud/app/engine/: generate_config.py  model_generator.py  router_generator.py  schema_generator.py
ai/nlp2crud/examples/: config.json
mobile/swiftui/CombineWeather/: README.md
mobile/swiftui/CombineWeather/CombineWeather/: CombineWeatherApp.swift  ContentView.swift
mobile/swiftui/CombineWeather/CombineWeather.xcodeproj/: project.pbxproj
mobile/swiftui/CombineWeather/CombineWeatherTests/: CombineWeatherTests.swift
mobile/swiftui/CombineWeather/CombineWeatherUITests/: CombineWeatherUITests.swift  CombineWeatherUITestsLaunchTests.swift
python/python-crud-apis/: README.md
python/python-crud-apis/fastapi_crud_app/: emp.db  main.py  requirements.txt
python/python-crud-apis/fastapi_crud_app/app/: db.py
python/python-crud-apis/fastapi_crud_app/test/: test_employee.py
python/python-crud-apis/flask_crud_app/: requirements.txt
python/python-crud-apis/flask_crud_app/app/: __init__.py  run.py
python/python-crud-apis/flask_crud_app/instance/: emp.db
python/python-crud-apis/flask_crud_app/test/: test_employee.py
(+13 files in other folders)
