[project]
name = "nlp2crud"
version = "0.1.0"
description = "NLP-powered FastAPI CRUD generator"
authors = [{ name = "Nagesh Kumar Mishra", email = "you@example.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "pydantic",
    "requests",
    "python-dotenv",
]

[project.scripts]
nlp2crud = "cli:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
